--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 .container {
-  max-width: 900px;
+  max-width: 800px;
   margin: 50px auto;
   font-family: "Titillium Web", sans-serif;
   color: #010038;
@@ -15,35 +15,69 @@
 .city {
   font-size: 28px;
   font-weight: 100;
-  line-height: 32px;
 }
 
 .day {
   font-size: 22px;
   font-weight: 100;
-  line-height: 26px;
 }
 
 .time {
   font-size: 18px;
   font-weight: 500;
-  line-height: 22px;
 }
 
 .weather {
   display: block;
   text-align: center;
-  font-size: 20px;
+  padding-left: 20px;
+}
+
+.weather img {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+}
+
+.weather-description {
+  display: block;
+  font-size: 14px;
   font-weight: 100;
-  line-height: 24px;
+  line-height: 1;
+  margin: 0px auto;
+}
+
+.min-max-temp {
+  display: block;
+  margin: 5px auto 0;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.weather-container {
+  display: block;
+  margin: 0px auto;
+}
+
+.temperature {
+  font-size: 50px;
+  font-weight: 500;
+}
+
+.degrees {
+  font-size: 16px;
+  font-weight: 500;
+  position: relative;
+  top: -22px;
+  margin-left: 5px;
 }
 
 .weather-details {
   display: block;
-  text-align: right;
+  text-align: left;
   font-size: 16px;
   font-weight: 100;
-  line-height: 20px;
+  padding-left: 50px;
 }
 
 .weather-details ul {
