Displayed real weather data

--- a/src/style.css
+++ b/src/style.css
@@ -12,12 +12,12 @@
   padding: 30px;
 }
 
-.city {
+h1 {
   font-size: 28px;
   font-weight: 100;
 }
 
-.day {
+h2 {
   font-size: 22px;
   font-weight: 100;
 }
