--- a/src/style.css
+++ b/src/style.css
@@ -8,12 +8,55 @@
 .weather-app {
   background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
   border: 1px solid #537ec5;
-  border-radius: 5px;
+  border-radius: 4px;
   padding: 30px;
 }
 
 form {
   margin-bottom: 5px;
+}
+
+input[type="search"] {
+  padding: 5px;
+  border: 1px solid #537ec5;
+  border-radius: 4px;
+  color: #010038;
+}
+
+input[type="search"]:focus {
+  outline-color: #f39422;
+  border: transparent;
+}
+
+input[type="submit"] {
+  padding: 5px;
+  border: transparent;
+  border-radius: 4px;
+  background-color: #b22222;
+  color: #fff;
+  font-weight: 500;
+}
+
+input[type="submit"]:hover {
+  outline-color: #7c0a02;
+  background-color: #7c0a02;
+  transition-duration: 0.4s;
+}
+
+button {
+  margin-left: 3px;
+  padding: 5px;
+  border: transparent;
+  border-radius: 4px;
+  background-color: #f39422;
+  color: #ffffff;
+  font-weight: 500;
+}
+
+button:hover {
+  outline-color: #e25822;
+  background-color: #e25822;
+  transition-duration: 0.4s;
 }
 
 h1 {
