--- a/src/style.css
+++ b/src/style.css
@@ -12,15 +12,12 @@
   padding: 30px;
 }
 
-form {
-  margin-bottom: 5px;
-}
-
 input[type="search"] {
   padding: 5px;
   border: 1px solid #537ec5;
   border-radius: 4px;
   color: #010038;
+  margin-bottom: 5px;
 }
 
 input[type="search"]:focus {
@@ -35,6 +32,9 @@ input[type="submit"] {
   background-color: #b22222;
   color: #fff;
   font-weight: 500;
+  width: 70px;
+  margin-bottom: 5px;
+  margin-right: 3px;
 }
 
 input[type="submit"]:hover {
@@ -44,13 +44,14 @@ input[type="submit"]:hover {
 }
 
 button {
-  margin-left: 3px;
   padding: 5px;
   border: transparent;
   border-radius: 4px;
   background-color: #f39422;
   color: #ffffff;
   font-weight: 500;
+  width: 70px;
+  margin-bottom: 5px;
 }
 
 button:hover {
@@ -90,19 +91,14 @@ h2 {
   font-size: 14px;
   font-weight: 100;
   line-height: 1;
-  margin: 0px auto;
+  text-align: center;
 }
 
 .min-max-temp {
   display: block;
-  margin: 5px auto 0;
+  margin: 0 auto;
   font-size: 16px;
   font-weight: 500;
-}
-
-.weather-container {
-  display: block;
-  margin: 0px auto;
 }
 
 .temperature {
@@ -139,17 +135,32 @@ h2 {
   cursor: default;
 }
 
-.weather-details {
-  display: block;
+.weather-details ul {
+  list-style: none;
   text-align: left;
   font-size: 16px;
   font-weight: 100;
-}
-
-.weather-details ul {
-  list-style: none;
   margin: 0;
   padding: 0;
+}
+
+hr {
+  border: 1px solid #537ec5;
+  margin: 30px auto;
+}
+
+.forecast {
+  font-size: 14px;
+  text-align: center;
+}
+
+.forecast img {
+  width: 50px;
+  margin: 0 auto;
+}
+
+.code {
+  font-size: 14px;
 }
 
 .code a {
