Added some spacing between the search and the main section

--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,10 @@
   padding: 30px;
 }
 
+.search {
+  margin-bottom: 20px;
+}
+
 input[type="search"] {
   padding: 5px;
   border: 1px solid #537ec5;
